tests/fixtures/invalid/none_div_set.py
# Cannot divide None and Set[int]
x: float = None / {1, 2, 3}
